fix typos and notebook's markdown update

--- a/developer-insights.ipynb
+++ b/developer-insights.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Developer Insights"
+    "# Developer Insights\n",
+    "Every year stack overflow organises a survey for developers all around the world. In this notebook I have analyzed the trends for the consecutive years 2018 and 2019. This is a small contribution from my side for the readers to understand the current situation of developers all around the world."
    ]
   },
   {
@@ -45,6 +46,13 @@
     "\n",
     "data_18 = pd.read_csv('data/2018.csv', usecols = ['Country', 'Employment','Student','EducationTypes','DevType',\n",
     "                                                  'Age','Gender','JobSatisfaction','LanguageWorkedWith']);\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Viewing the data set for 2019,"
    ]
   },
   {
@@ -212,6 +220,13 @@
    ],
    "source": [
     "data_19.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Viewing year 2018 data,"
    ]
   },
   {
@@ -387,6 +402,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this section we would look upon our top 10 countries responds of developers for the year 2018 and 2019"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -540,6 +562,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now obtain percentage of developers for top 10 Country for each year stored in dataframe named *data*. Further Plotting histogram,"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -581,6 +610,13 @@
    "metadata": {},
    "source": [
     "## 2. Types of Developer for each year"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this section we will analyze the developers responds for each year to analyze the growth and distribution. "
    ]
   },
   {
@@ -799,6 +835,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After cleaning we visualize the dataframes (data19 and data18) with histogram plot,"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -839,6 +882,13 @@
    "metadata": {},
    "source": [
     "## 3. Developers at country level"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can have a quick look of missing data, to decide how to further preprocess with the following function and uncommenting by removing '#' from below two cells."
    ]
   },
   {
@@ -1083,7 +1133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Languages used in 2018-2019\n",
+    "## 4. Languages used in 2018-2019\n",
     "Analyzing the language trends for the year 2018-2019."
    ]
   },
@@ -1308,7 +1358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Skills-Training \n",
+    "## 5. Skills-Training \n",
     "Here we analyze the skills acquired from various resources and their distribution."
    ]
   },
@@ -1377,7 +1427,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## End"
+    "## End\n",
+    "\n",
+    "Thank you!<br>\n",
+    "Author: Pratik Kumar"
    ]
   }
  ],
